--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/stack": "^5.9.0",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.20.0",
-    "expo": "^39.0.3",
+    "expo": "38.0.8",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.1.5",
     "native-base": "^2.13.14",
@@ -23,7 +23,6 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
     "react-native-web": "~0.11.7",
