--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
+    "react-native-tags": "^2.2.0",
     "react-native-web": "~0.11.7",
     "yup": "^0.29.3"
   },
