--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-deck-swiper": "^2.0.5",
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
