--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.6",
-    "@react-navigation/stack": "^5.9.0",
+    "@react-navigation/stack": "^5.9.3",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.20.0",
     "expo": "38.0.8",
@@ -27,6 +27,7 @@
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
     "react-native-tags": "^2.2.0",
