--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "bootcamp",
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
@@ -14,29 +15,28 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "@use-expo/font": "^2.0.0",
-    "axios": "^0.20.0",
-    "expo": "38.0.8",
-    "expo-status-bar": "^1.0.2",
+    "expo": "~51.0.20",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "formik": "^2.1.5",
     "native-base": "^2.13.14",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-deck-swiper": "^2.0.5",
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
     "react-native-tags": "^2.2.0",
-    "react-native-web": "~0.11.7",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "~5.5.3"
   },
   "private": true
 }
