--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@reduxjs/toolkit": "^2.2.6",
     "@use-expo/font": "^2.0.0",
     "axios": "^1.7.2",
     "expo": "~51.0.20",
@@ -31,6 +33,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
     "react-native-tags": "^2.2.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
